--- a/internal/tscode/action_base.tmpl
+++ b/internal/tscode/action_base.tmpl
@@ -96,6 +96,14 @@ export class {{$actionName}} implements {{useImport "Action"}}<{{$node}}> {
     return this.builder.build();
   }
 
+  async valid(): Promise<boolean> {
+    return this.builder.valid();
+  }
+
+  async validX(): Promise<void> {
+    await this.builder.validX();
+  }
+
   {{ if $action.IsDeletingNode -}}
     async save(): Promise<void> {
       await {{useImport "saveBuilder"}}(this.builder);
