add privacy/permissions to actions

--- a/internal/tscode/action_base.tmpl
+++ b/internal/tscode/action_base.tmpl
@@ -77,7 +77,7 @@ export class {{$actionName}} implements {{useImport "Action"}}<{{$node}}> {
     );
   }
 
-  getFields(): {{useImport $builderInput}} {
+  getInput(): {{useImport $builderInput}} {
     return {
       {{ if $hasInput -}}
         ...this.input,
