--- a/internal/tscode/action_base.tmpl
+++ b/internal/tscode/action_base.tmpl
@@ -78,18 +78,11 @@ export class {{$actionName}} implements {{useImport "Action"}}<{{$node}}> {
   }
 
   getInput(): {{useImport $builderInput}} {
-    return {
-      {{ if $hasInput -}}
-        ...this.input,
-      {{end -}}
-      requiredFields: [
-        {{ range $field := $action.GetFields -}}
-          {{ if and $field.EditableField (isRequiredField $action $field) -}}
-          "{{$field.FieldName}}",
-          {{end -}}
-        {{end -}}
-      ],
-    };
+    {{ if $hasInput -}}
+      return this.input;
+      {{ else -}}
+      return {};
+    {{end -}}
   }
 
   async changeset(): Promise<{{useImport "Changeset"}}<{{$node}}>> {
