make it so that we can add edges to edges that are also being created in changesets
e.g. a trigger that adds a contact and adds an edge to that contact

have to change how executor works to not only understand dependencies but to run operations that run rows first
(will add full suite of tests next)

this changes the approach from what we were doing in golang to inline all the logic within the Executor and have the outer executor be responsible for reordering the operators and resolving the value

instead of building depgraph or something like it, quick google search found https://github.com/datavis-tech/graph-data-structure which seems to do what I want so using that.

--- a/internal/tscode/builder.tmpl
+++ b/internal/tscode/builder.tmpl
@@ -80,42 +80,17 @@ export class {{$builder}} implements {{useImport "Builder"}}<{{$node}}> {
     };
   }
 
-  private getEditedFields(): Map<string, any> {
-    const fields = this.input;
-
-    let result = new Map<string, any>();
-
-    const addField = function(key: string, value: any) {
-      if (value !== undefined) {
-        result.set(key, value);
-      }
-    };
-    {{range $field := .FieldInfo.Fields -}}
-      {{ if $field.EditableField -}}
-        {{$tsFieldName := $field.TsFieldName -}}
-        addField("{{$field.FieldName}}", fields.{{$tsFieldName}});
-        {{ $inverseEdge := $field.GetInverseEdge -}}
-        {{ if $inverseEdge -}}
-          if (fields.{{$tsFieldName}}) {
-            this.orchestrator.addInboundEdge(
-              fields.{{$tsFieldName}},
-              {{useImport "EdgeType"}}.{{$inverseEdge.TsEdgeConst}},
-              {{useImport "NodeType"}}.{{$inverseEdge.NodeInfo.Node}},
-            );
-          }
-        {{end -}}
-      {{end -}}
-    {{end -}}
-    return result;
-  }
-
   {{ $edgeInfos := .EdgeInfo.Associations -}}
   {{ range $edge := $edgeInfos -}}  
+    {{ $node := useImport .NodeInfo.Node -}}
   add{{$edge.Singular}}(...ids: {{useImport "ID"}}[]): {{$builder}};
-  add{{$edge.Singular}}(...nodes: {{useImport .NodeInfo.Node}}[]): {{$builder}};
-  add{{$edge.Singular}}(...nodes: ID[] | {{.NodeInfo.Node}}[]): {{$builder}} {
+  add{{$edge.Singular}}(...nodes: {{$node}}[]): {{$builder}};
+  add{{$edge.Singular}}(...nodes: Builder<{{$node}}>[]): {{$builder}};
+  add{{$edge.Singular}}(...nodes: ID[] | {{$node}}[] | Builder<{{$node}}>[]): {{$builder}} {
     for (const node of nodes) {
-      if (typeof node === "object") {
+      if (this.is{{$node}}Builder(node)) {
+        this.add{{$edge.Singular}}ID(node);
+      } else if (typeof node === "object") {
         this.add{{$edge.Singular}}ID(node.id);
       } else {
         this.add{{$edge.Singular}}ID(node);
@@ -124,7 +99,7 @@ export class {{$builder}} implements {{useImport "Builder"}}<{{$node}}> {
     return this;
   }
 
-  add{{$edge.Singular}}ID(id: {{useImport "ID"}}, options?: {{useImport "AssocEdgeInputOptions"}}): {{$builder}} {
+  add{{$edge.Singular}}ID(id: {{useImport "ID"}} | Builder<{{$node}}>, options?: {{useImport "AssocEdgeInputOptions"}}): {{$builder}} {
     {{/* TODO need inbound edges also */}}
     this.orchestrator.addOutboundEdge(
       id, 
@@ -180,6 +155,43 @@ export class {{$builder}} implements {{useImport "Builder"}}<{{$node}}> {
     {{/* TODO: throw if saveX() has not been called */ -}}
     return await this.orchestrator.editedEntX();
   }
+
+  private getEditedFields(): Map<string, any> {
+    const fields = this.input;
+
+    let result = new Map<string, any>();
+
+    const addField = function(key: string, value: any) {
+      if (value !== undefined) {
+        result.set(key, value);
+      }
+    };
+    {{range $field := .FieldInfo.Fields -}}
+      {{ if $field.EditableField -}}
+        {{$tsFieldName := $field.TsFieldName -}}
+        addField("{{$field.FieldName}}", fields.{{$tsFieldName}});
+        {{ $inverseEdge := $field.GetInverseEdge -}}
+        {{ if $inverseEdge -}}
+          if (fields.{{$tsFieldName}}) {
+            this.orchestrator.addInboundEdge(
+              fields.{{$tsFieldName}},
+              {{useImport "EdgeType"}}.{{$inverseEdge.TsEdgeConst}},
+              {{useImport "NodeType"}}.{{$inverseEdge.NodeInfo.Node}},
+            );
+          }
+        {{end -}}
+      {{end -}}
+    {{end -}}
+    return result;
+  }
+
+  {{ range .GetUniqueNodes -}} 
+    private is{{.Node}}Builder(node: ID | {{.Node}} | Builder<{{.Node}}>): node is Builder<{{.Node}}> {
+      return (node as Builder<{{.Node}}>).placeholderID !== undefined;
+    }
+
+  {{end}}
+
 }
 
 {{end -}}
