typescript: add triggers to actions (#50)
add triggers to actions

this makes it possible to batch side effects to each action that can be run in the same transaction as the action.

these triggers don't actually perform any writes in them. they use the `builder` to build up modifications to the existing changeset or return additional changesets that should also be run as part of the mutation/action.

At some point in the future when we're super fancy, we can detect writes happening in triggers and respond to that in some way. For now, nothing's happening here and it's not as performant as it could be.

It's still TBD on exactly when triggers should run. In go, they happen before validation. here, some triggers run before validation (if they don't return a promise), and some run parallel to validation. This inconsistency is not going to work long term and probably need to change and figure out best place to do so. This is where feedback and getting real world usecases again will be helpful.

For example, every time an account is created, marking the user as "UNVERIFIED"

```ts
  // assuming an accountStatus field on the user 
  triggers = [
    {
      changeset: (builder: UserBuilder): void => {
        builder.updateInput({
          accountStatus: "UNVERIFIED",
        });
      },
    },
```

or more complicated, to also create a contact for the user when the user's account is created assuming a contact management app where the user always has contacts including themselves as one:

```ts
export default class CreateUserAction extends CreateUserActionBase {
  triggers = [
    {
      changeset: (builder: UserBuilder): void => {
        builder.updateInput({
          accountStatus: "UNVERIFIED",
          // not needed because we have serverDefault but can also set it here.
          emailVerified: false,
        });
      },
    },
    {
      // also create a contact for self when creating user
      changeset: (builder: U

--- a/internal/tscode/action_base.tmpl
+++ b/internal/tscode/action_base.tmpl
@@ -1,8 +1,11 @@
-{{ reserveImport "ent/action" "Action" "saveBuilder" "saveBuilderX" "saveBuilderXNoEnt" "WriteOperation" "Changeset" }}
+{{ reserveImport "ent/action" "Action" "Builder" "WriteOperation" "Changeset" }}
 {{ reserveImport "ent/ent" "Viewer" "ID" "Ent" }}
 
-{{ $packagePath := printf "src/ent/%s" .NodeData.PackageName }}
-{{ reserveDefaultImport $packagePath .NodeData.Node}}
+{{ range .NodeData.GetUniqueNodesForceSelf -}} 
+  {{$packagePath := printf "src/ent/%s" .PackageName }}
+  {{ reserveDefaultImport $packagePath .Node}}
+{{ end}}
+
 {{ $builderName := printf "%sBuilder" .NodeData.Node -}}
 {{ $builderInput := printf "%sInput" .NodeData.Node -}}
 
@@ -22,10 +25,9 @@
   export interface {{$inputName}} {
     {{ range $field := $action.GetFields -}}
       {{ if $field.EditableField -}}
-        {{$type := $field.TsType -}}
-        {{/* TODO make this generic to work for all imported types but this is hack for ID for now */ -}}
-        {{ if eq $type "ID" -}}
-          {{ $type = useImport "ID" -}}
+        {{$type := $field.TsBuilderType -}}
+        {{range $import := $field.TsBuilderImports -}}
+          {{ $ignore := useImport $import -}}
         {{end -}}
         {{if isRequiredField $action $field -}}
           {{$field.TsFieldName}}: {{$type}};
@@ -78,18 +80,11 @@ export class {{$actionName}} implements {{useImport "Action"}}<{{$node}}> {
   }
 
   getInput(): {{useImport $builderInput}} {
-    return {
-      {{ if $hasInput -}}
-        ...this.input,
-      {{end -}}
-      requiredFields: [
-        {{ range $field := $action.GetFields -}}
-          {{ if and $field.EditableField (isRequiredField $action $field) -}}
-          "{{$field.FieldName}}",
-          {{end -}}
-        {{end -}}
-      ],
-    };
+    {{ if $hasInput -}}
+      return this.input;
+      {{ else -}}
+      return {};
+    {{end -}}
   }
 
   async changeset(): Promise<{{useImport "Changeset"}}<{{$node}}>> {
@@ -106,19 +101,21 @@ export class {{$actionName}} implements {{useImport "Action"}}<{{$node}}> {
 
   {{ if $action.IsDeletingNode -}}
     async save(): Promise<void> {
-      await {{useImport "saveBuilder"}}(this.builder);
+      await this.builder.save();
   {{ else -}}
     async save(): Promise<{{$node}} | null> {
-    return await {{useImport "saveBuilder"}}(this.builder);
+      await this.builder.save();
+      return await this.builder.editedEnt();
   {{ end -}}
   }
 
   {{ if $action.IsDeletingNode -}}
     async saveX(): Promise<void> {
-      await {{useImport "saveBuilderXNoEnt"}}(this.builder);
+      await this.builder.saveX();
   {{ else -}}
     async saveX(): Promise<{{$node}}> {
-    return await {{useImport "saveBuilderX"}}(this.builder);
+      await this.builder.saveX();
+      return await this.builder.editedEntX();
   {{ end -}}
   }
 
