add default Time scalar

--- a/internal/graphql/ts_templates/object.tmpl
+++ b/internal/graphql/ts_templates/object.tmpl
@@ -1,6 +1,7 @@
 {{reserveImport "graphql" "GraphQLSchema" "GraphQLObjectType" "GraphQLID" "GraphQLString" "GraphQLEnumType" "GraphQLNonNull" "GraphQLList" "GraphQLFloat" "GraphQLInt" "GraphQLFieldConfig" "GraphQLFieldConfigMap" "GraphQLResolveInfo"}}
 {{reserveImport "ent/ent" "ID" }}
-{{reserveImport "src/graphql/context" "Context"}};
+{{reserveImport "src/graphql/context" "Context"}}
+{{reserveImport "ent/graphql/scalars/time" "GraphQLTime"}}
 
 {{with .NodeData -}}
 
